<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/EditTextTheme"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:id="@+id/textView_loginScreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coming_soon"
        android:text="@string/loginScreen_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/imageView_loginScreen_ball"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="72dp"
        android:foreground="@drawable/white_circle"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/white_circle" />

    <ImageView
        android:id="@+id/imageView_loginScreen_saprk1"
        android:layout_width="3dp"
        android:layout_height="17dp"
        android:foreground="@drawable/white_square"
        android:rotation="30"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.395"
        app:srcCompat="@drawable/white_square" />

    <ImageView
        android:id="@+id/imageView_loginScreen_saprk2"
        android:layout_width="3dp"
        android:layout_height="17dp"
        android:foreground="@drawable/white_square"
        android:rotation="40"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@drawable/white_square" />

    <ImageView
        android:id="@+id/imageView_loginScreen_saprk3"
        android:layout_width="3dp"
        android:layout_height="17dp"
        android:foreground="@drawable/white_square"
        android:rotation="9"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.4013"
        app:srcCompat="@drawable/white_square" />

    <Button
        android:id="@+id/button_loginScreen_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="200dp"
        android:background="@color/black"
        android:fontFamily="@font/coming_soon"
        android:onClick="onLogIn"
        android:text="Log In"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_loginScreen_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="570dp"
        android:background="@color/black"
        android:fontFamily="@font/coming_soon"
        android:onClick="onRegister"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_loginScreen_email"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:lines="@android:integer/config_mediumAnimTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/editText_loginScreen_password"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalUp"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textView_loginScreen_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coming_soon"
        android:text="@string/loginScreen_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_loginScreen_email"
        app:layout_constraintStart_toStartOf="@+id/editText_loginScreen_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_loginScreen_email" />

    <TextView
        android:id="@+id/textView_loginScreen_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coming_soon"
        android:text="@string/loginScreen_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_loginScreen_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText_loginScreen_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_loginScreen_password" />

</androidx.constraintlayout.widget.ConstraintLayout>